Fixes for some obvious FindBugs-discovered inefficiencies